<resources>
    <string name="app_name">TripManager</string>
    <string name="title_activity_login">Sign in</string>
    <string name="signInButton">Sign in</string>
    <string name="signUpButton">Sign up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>


...
    <string name="tab2">Details</string>
    <string name="tab3">Checklist</string>
    <string name="tab4">Past Trips</string>
    <string name="tab5">Upcoming Trips</string>
    <string name="title_activity_home_page">HomePage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tripfriends">Friends</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_trip">CreateTrip</string>
    <string name="title_activity_trip_details_maps">Map</string>
...
