<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/contacts"
            android:title="Contacts" />
        <item
            android:id="@+id/stats"
            android:title="Stats" />
        <item
            android:id="@+id/editProfile"
            android:title="Edit Profile" />

        <item
            android:id="@+id/about"
            android:title="About" />

        <item
            android:id="@+id/logout"
            android:title="Logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
